# dashboard

./: .env  .gitignore  README.md  pyproject.toml
dashboard/: app.py  cli.py
dashboard/data/: log.xml
dashboard/static/: styles.css
dashboard/templates/: base.html  index.html
