[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard"
version = "0.1.0"
description = "Simple Flask + Bootstrap dashboard for XML logs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Flask",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "Flask>=3.0.0",
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
dashboard = "dashboard.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
dashboard = [
  "templates/**/*.html",
  "static/**/*.css",
  "data/*.xml",
]
