[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fenn-dashboard"
version = "0.0.1"
description = "Simple dashboard for fenn library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name="Alessio Russo", email="alessio.russo.ar98@gmail.com" },
]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Framework :: Flask",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "Flask>=3.0.0",
]

[project.urls]
"Homepage" = "https://pyfenn.org"
"Documentation" = "https://pyfenn.org"
"Source Code" = "https://github.com/pyfenn/dashboard"
"Bug Tracker" = "https://github.com/pyfenn/dashboard/issues"

[project.scripts]
dashboard = "dashboard.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
dashboard = [
  "templates/**/*.html",
  "static/**/*.css"
]